Apply suggestion from @jreineckearm
Co-authored-by: Jens Reinecke <jens.reinecke@arm.com>

--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -290,7 +290,7 @@ debug-adapters:
         description: Interface configuration for the debug port
         options:
           - name: Clock
-            description: Clock configuration
+            description: Maximum debug clock
             yml-node: clock_armdbg
             type: enum
             values:
