Apply suggestion from @jreineckearm
Co-authored-by: Jens Reinecke <jens.reinecke@arm.com>

--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -296,7 +296,7 @@ debug-adapters:
             values:
               - name: auto
                 value: auto
-                description: auto detection of optimal debug clock
+                description: Auto-detection of optimal debug clock
               - name: 50MHz
                 value: 50MHz
               - name: 33MHz
