--- a/registry/debug-adapters.yml
+++ b/registry/debug-adapters.yml
@@ -283,15 +283,15 @@ debug-adapters:
     alias-name: ["CMSIS-DAP@armdbg"]
     template: CMSIS-DAP-Arm-Debugger.adapter.json          # template files
     defaults:                                              # default values to use when nowhere specified
-      protocol_armdbg: auto
-      clock_armdbg: auto
+      protocol-armdbg: auto
+      clock-armdbg: auto
     user-interface:
       - section: Debug Interface
         description: Interface configuration for the debug port
         options:
           - name: Clock
             description: Maximum debug clock
-            yml-node: clock_armdbg
+            yml-node: clock-armdbg
             type: enum
             values:
               - name: auto
@@ -315,7 +315,7 @@ debug-adapters:
             default: auto
           - name: Protocol
             description: Debug protocol
-            yml-node: protocol_armdbg
+            yml-node: protocol-armdbg
             type: enum
             values:
               - name: auto
@@ -333,54 +333,39 @@ debug-adapters:
     alias-name: ["ST-Link@armdbg"]
     template: STLink-Arm-Debugger.adapter.json             # template files
     defaults:                                              # default values to use when nowhere specified
-      protocol_armdbg: auto
-      clock_armdbg: auto
+      protocol-armdbg: auto
+      clock-armdbg: auto
     user-interface:
       - section: Debug Interface
         description: Interface configuration for the debug port
         options:
           - name: Clock
             description: Clock configuration
-            yml-node: clock_armdbg
+            yml-node: clock-armdbg
             type: enum
             values:
               - name: auto
                 value: auto
                 description: auto detection of optimal debug clock
               - name: 50MHz
-                value: 50MHz
               - name: 33MHz
-                value: 33MHz
               - name: 25MHz
-                value: 25MHz
               - name: 20MHz
-                value: 20MHz
               - name: 10MHz
-                value: 10MHz
               - name: 5MHz
-                value: 10MHz
               - name: 2MHz
-                value: 2MHz
               - name: 1MHz
-                value: 1MHz
               - name: 500kHz
-                value: 500kHz
               - name: 200kHz
-                value: 200kHz
               - name: 100kHz
-                value: 100kHz
               - name: 40kHz
-                value: 40kHz
               - name: 20kHz
-                value: 20kHz
               - name: 10kHz
-                value: 10kHz
               - name: 5kHz
-                value: 5kHz
             default: auto
           - name: Protocol
             description: Protocol configuration
-            yml-node: protocol_armdbg
+            yml-node: protocol-armdbg
             type: enum
             values:
               - name: auto
